--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "@types/react-helmet": "^6.1.11",
     "@wojtekmaj/react-daterange-picker": "^5.4.4",
     "antd": "^5.11.1",
     "apexcharts": "^3.44.0",
@@ -32,10 +33,9 @@
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
-    "react-lazyload": "^3.2.0",
-    "react-lazyload-fadein": "^1.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.18.0",
